--- a/video_llava.ipynb
+++ b/video_llava.ipynb
@@ -31,6 +31,7 @@
         "pip install flash-attn --no-build-isolation\n",
         "pip install decord opencv-python git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d2126\n",
         "pip install pytube\n",
+        "pip install flask pyngrok\n",
         "\n",
         "\"\"\"\n",
         "with open('cmmds.sh','w+') as fp:\n",
@@ -479,6 +480,7 @@
         "  yt = YouTube(link)\n",
         "  stream = yt.streams.get_highest_resolution()\n",
         "  stream.download('/content/videos')\n",
+        "\n",
         "def load_model():\n",
         "    model_path = 'LanguageBind/Video-LLaVA-7B'\n",
         "    cache_dir = 'cache_dir'\n",
@@ -733,11 +735,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def api(link):\n",
+        "  start=time.time()\n",
+        "  get_video(link)\n",
+        "  re={'prompt':\"Can you provide a summary of the video?\",\"summary\":,\"time\":}\n",
+        "  re['summary']:model(tokenizer,model,os.path.join('/content/videos',os.listdir('/content/videos')[0]),re['prompt'])\n",
+        "  end=time.time()\n",
+        "  re['time']=end-start\n",
+        "  !rm -rf /content/videos\n",
+        "  return re\n",
+        "\n"
+      ],
       "metadata": {
         "id": "qnDvDNyEMjkg"
       },
       "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyngrok import ngrok\n",
+        "\n",
+        "ngrok.set_auth_token('2ciWfPBaLM8lGhv97r7EJKWCrAL_MFJRRQ6yDBzEFksFdsbG')\n",
+        "from flask import Flask,request\n",
+        "from flask_ngrok import run_with_ngrok\n",
+        "app = Flask(__name__)\n",
+        "# Define a route for the API\n",
+        "@app.route('/', methods=['GET'])\n",
+        "def hello():\n",
+        "    url=request.args.get('url')\n",
+        "    re=api(link)\n",
+        "    return {\"response\":re}\n",
+        "\n",
+        "ngrok_tunnel = ngrok.connect(5000)\n",
+        "print(\"Public URL:\", ngrok_tunnel.public_url)\n",
+        "app.run()"
+      ],
+      "metadata": {
+        "id": "0FEjznI-63Li"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
